validationHook